fix responsive and gap in home

--- a/src/components/StatesList.js/styles.module.css
+++ b/src/components/StatesList.js/styles.module.css
@@ -14,13 +14,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0.75rem;
   margin-top: 1rem;
 }
 
 .barrio {
   position: relative;
   cursor: pointer;
+  padding: .36rem;
+  width: 100%;
+  height: 10rem;
 }
 
 .barrio:hover * {
@@ -44,8 +46,8 @@
   padding: .1rem;
   border-radius: .3rem; */
   border-radius: 8px;
-  width: 14rem;
-  height: 14rem;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,11 +58,19 @@
   cursor: pointer;
 }
 
-@media (min-width: 600px) {
-  .barrios {
-    padding: 0 6rem;
+@media (min-width: 400px) {
+  .barrio {
+    width: 50%;
   }
   .select_content {
     justify-content: center;
   }
+}
+
+@media (min-width: 600px) {
+  .barrio {
+    width: 16rem;
+    height: 16rem;
+  }
+  
 }
